done with inMemory authentication

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -28,7 +28,7 @@
                             <input type="checkbox" class="form-check-input" name="remember-me"> Remember me
                         </label>
                     </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" class="btn btn-primary">Submit</button> //
                 </form>
             </div>
         </div>
